java/versioned_docs/version-1.10.0/api/class-elementhandle.mdx
---
id: class-elementhandle
title: "ElementHandle"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

* extends: [JSHandle]

ElementHandle represents an in-page DOM element. ElementHandles can be created with the [Page.querySelector(selector)](./api/class-page.mdx#pagequeryselectorselector) method.

```java
import com.microsoft.playwright.*;

public class Example {
  public static void main(String[] args) {
    try (Playwright playwright = Playwright.create()) {
      BrowserType chromium = playwright.chromium();
      Browser browser = chromium.launch();
      Page page = browser.newPage();
      page.navigate("https://example.com");
      ElementHandle hrefElement = page.querySelector("a");
      hrefElement.click();
      // ...
    }
  }
}
```

ElementHandle prevents DOM element from garbage collection unless the handle is disposed with [JsHandle.dispose()](./api/class-jshandle.mdx#jshandledispose). ElementHandles are auto-disposed when their origin frame gets navigated.

ElementHandle instances can be used as an argument in [Page.evalOnSelector(selector, expression[, arg])](./api/class-page.mdx#pageevalonselectorselector-expression-arg) and [Page.evaluate(expression[, arg])](./api/class-page.mdx#pageevaluateexpression-arg) methods.


- [ElementHandle.boundingBox()](./api/class-elementhandle.mdx#elementhandleboundingbox)
- [ElementHandle.check([options])](./api/class-elementhandle.mdx#elementhandlecheckoptions)
- [ElementHandle.click([options])](./api/class-elementhandle.mdx#elementhandleclickoptions)
- [ElementHandle.contentFrame()](./api/class-elementhandle.mdx#elementhandlecontentframe)
- [ElementHandle.dblclick([options])](./api/class-elementhandle.mdx#elementhandledblclickoptions)
- [ElementHandle.dispatchEvent(type[, eventInit])](./api/class-elementhandle.mdx#elementhandledispatcheventtype-eventinit)
- [ElementHandle.evalOnSelector(selector, expression[, arg])](./api/class-elementhandle.mdx#elementhandleevalonselectorselector-expression-arg)
- [ElementHandle.evalOnSelectorAll(selector, expression[, arg])](./api/class-elementhandle.mdx#elementhandleevalonselectorallselector-expression-arg)
- [ElementHandle.fill(value[, options])](./api/class-elementhandle.mdx#elementhandlefillvalue-options)
- [ElementHandle.focus()](./api/class-elementhandle.mdx#elementhandlefocus)
- [ElementHandle.getAttribute(name)](./api/class-elementhandle.mdx#elementhandlegetattributename)
- [ElementHandle.hover([options])](./api/class-elementhandle.mdx#elementhandlehoveroptions)
- [ElementHandle.innerHTML()](./api/class-elementhandle.mdx#elementhandleinnerhtml)
- [ElementHandle.innerText()](./api/class-elementhandle.mdx#elementhandleinnertext)
- [ElementHandle.isChecked()](./api/class-elementhandle.mdx#elementhandleischecked)
- [ElementHandle.isDisabled()](./api/class-elementhandle.mdx#elementhandleisdisabled)
- [ElementHandle.isEditable()](./api/class-elementhandle.mdx#elementhandleiseditable)
- [ElementHandle.isEnabled()](./api/class-elementhandle.mdx#elementhandleisenabled)
- [ElementHandle.isHidden()](./api/class-elementhandle.mdx#elementhandleishidden)
- [ElementHandle.isVisible()](./api/class-elementhandle.mdx#elementhandleisvisible)
- [ElementHandle.ownerFrame()](./api/class-elementhandle.mdx#elementhandleownerframe)
- [ElementHandle.press(key[, options])](./api/class-elementhandle.mdx#elementhandlepresskey-options)
- [ElementHandle.querySelector(selector)](./api/class-elementhandle.mdx#elementhandlequeryselectorselector)
- [ElementHandle.querySelectorAll(selector)](./api/class-elementhandle.mdx#elementhandlequeryselectorallselector)
- [ElementHandle.screenshot([options])](./api/class-elementhandle.mdx#elementhandlescreenshotoptions)
- [ElementHandle.scrollIntoViewIfNeeded([options])](./api/class-elementhandle.mdx#elementhandlescrollintoviewifneededoptions)
- [ElementHandle.selectOption(values[, options])](./api/class-elementhandle.mdx#elementhandleselectoptionvalues-options)
- [ElementHandle.selectText([options])](./api/class-elementhandle.mdx#elementhandleselecttextoptions)
- [ElementHandle.setInputFiles(files[, options])](./api/class-elementhandle.mdx#elementhandlesetinputfilesfiles-options)
- [ElementHandle.tap([options])](./api/class-elementhandle.mdx#elementhandletapoptions)
- [ElementHandle.textContent()](./api/class-elementhandle.mdx#elementhandletextcontent)
- [ElementHandle.type(text[, options])](./api/class-elementhandle.mdx#elementhandletypetext-options)
- [ElementHandle.uncheck([options])](./api/class-elementhandle.mdx#elementhandleuncheckoptions)
- [ElementHandle.waitForElementState(state[, options])](./api/class-elementhandle.mdx#elementhandlewaitforelementstatestate-options)
- [ElementHandle.waitForSelector(selector[, options])](./api/class-elementhandle.mdx#elementhandlewaitforselectorselector-options)
- [JsHandle.asElement()](./api/class-jshandle.mdx#jshandleaselement)
- [JsHandle.dispose()](./api/class-jshandle.mdx#jshandledispose)
- [JsHandle.evaluate(expression[, arg])](./api/class-jshandle.mdx#jshandleevaluateexpression-arg)
- [JsHandle.evaluateHandle(expression[, arg])](./api/class-jshandle.mdx#jshandleevaluatehandleexpression-arg)
- [JsHandle.getProperties()](./api/class-jshandle.mdx#jshandlegetproperties)
- [JsHandle.getProperty(propertyName)](./api/class-jshandle.mdx#jshandlegetpropertypropertyname)
- [JsHandle.jsonValue()](./api/class-jshandle.mdx#jshandlejsonvalue)

## ElementHandle.boundingBox()
- returns: <[null]|`BoundingBox`>
  - `x` <[double]> the x coordinate of the element in pixels.
  - `y` <[double]> the y coordinate of the element in pixels.
  - `width` <[double]> the width of the element in pixels.
  - `height` <[double]> the height of the element in pixels.

This method returns the bounding box of the element, or `null` if the element is not visible. The bounding box is calculated relative to the main frame viewport - which is usually the same as the browser window.

Scrolling affects the returned bonding box, similarly to [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect). That means `x` and/or `y` may be negative.

Elements from child frames return the bounding box relative to the main frame, unlike the [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect).

Assuming the page is static, it is safe to use bounding box coordinates to perform input. For example, the following snippet should click the center of the element.

```java
BoundingBox box = elementHandle.boundingBox();
page.mouse().click(box.x + box.width / 2, box.y + box.height / 2);
```

## ElementHandle.check([options])
- `options` <`ElementHandle.CheckOptions`>
  - `setForce` <[boolean]> Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method rejects. If the element is already checked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#pagemouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked. If not, this method rejects.

If the element is detached from the DOM at any moment during the action, this method rejects.

When all steps combined have not finished during the specified `timeout`, this method rejects with a [TimeoutError]. Passing zero timeout disables this.

## ElementHandle.click([options])
- `options` <`ElementHandle.ClickOptions`>
  - `setButton` <`enum MouseButton { LEFT, RIGHT, MIDDLE }`> Defaults to `left`.
  - `setClickCount` <[int]> defaults to 1. See [UIEvent.detail].
  - `setDelay` <[double]> Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
  - `setForce` <[boolean]> Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `setModifiers` <[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>> Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setPosition` <`Position`> A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `setX` <[double]>
    - `setY` <[double]>
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method clicks the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#pagemouse) to click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method rejects.

When all steps combined have not finished during the specified `timeout`, this method rejects with a [TimeoutError]. Passing zero timeout disables this.

## ElementHandle.contentFrame()
- returns: <[null]|[Frame]>

Returns the content frame for element handles referencing iframe nodes, or `null` otherwise

## ElementHandle.dblclick([options])
- `options` <`ElementHandle.DblclickOptions`>
  - `setButton` <`enum MouseButton { LEFT, RIGHT, MIDDLE }`> Defaults to `left`.
  - `setDelay` <[double]> Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
  - `setForce` <[boolean]> Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `setModifiers` <[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>> Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setPosition` <`Position`> A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `setX` <[double]>
    - `setY` <[double]>
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method double clicks the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#pagemouse) to double click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set. Note that if the first click of the `dblclick()` triggers a navigation event, this method will reject.

If the element is detached from the DOM at any moment during the action, this method rejects.

When all steps combined have not finished during the specified `timeout`, this method rejects with a [TimeoutError]. Passing zero timeout disables this.

:::note
`elementHandle.dblclick()` dispatches two `click` events and a single `dblclick` event.
:::

## ElementHandle.dispatchEvent(type[, eventInit])
- `type` <[String]> DOM event type: `"click"`, `"dragstart"`, etc.
- `eventInit` <[Object]> Optional event-specific initialization properties.

The snippet below dispatches the `click` event on the element. Regardless of the visibility state of the elment, `click` is dispatched. This is equivalend to calling [element.click()](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/click).

```java
elementHandle.dispatchEvent("click");
```

Under the hood, it creates an instance of an event based on the given `type`, initializes it with `eventInit` properties and dispatches it on the element. Events are `composed`, `cancelable` and bubble by default.

Since `eventInit` is event-specific, please refer to the events documentation for the lists of initial properties:
* [DragEvent](https://developer.mozilla.org/en-US/docs/Web/API/DragEvent/DragEvent)
* [FocusEvent](https://developer.mozilla.org/en-US/docs/Web/API/FocusEvent/FocusEvent)
* [KeyboardEvent](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/KeyboardEvent)
* [MouseEvent](https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent/MouseEvent)
* [PointerEvent](https://developer.mozilla.org/en-US/docs/Web/API/PointerEvent/PointerEvent)
* [TouchEvent](https://developer.mozilla.org/en-US/docs/Web/API/TouchEvent/TouchEvent)
* [Event](https://developer.mozilla.org/en-US/docs/Web/API/Event/Event)

You can also specify `JSHandle` as the property value if you want live objects to be passed into the event:

```java
// Note you can only create DataTransfer in Chromium and Firefox
JSHandle dataTransfer = page.evaluateHandle("() => new DataTransfer()");
Map<String, Object> arg = new HashMap<>();
arg.put("dataTransfer", dataTransfer);
elementHandle.dispatchEvent("dragstart", arg);
```

## ElementHandle.evalOnSelector(selector, expression[, arg])
- `selector` <[String]> A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `expression` <[String]> JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.
- `arg` <[Object]> Optional argument to pass to `expression`.
- returns: <[Object]>

Returns the return value of `expression`.

The method finds an element matching the specified selector in the `ElementHandle`s subtree and passes it as a first argument to `expression`. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, the method throws an error.

If `expression` returns a [Promise], then [ElementHandle.evalOnSelector(selector, expression[, arg])](./api/class-elementhandle.mdx#elementhandleevalonselectorselector-expression-arg) would wait for the promise to resolve and return its value.

Examples:

```java
ElementHandle tweetHandle = page.querySelector(".tweet");
assertEquals("100", tweetHandle.evalOnSelector(".like", "node => node.innerText"));
assertEquals("10", tweetHandle.evalOnSelector(".retweets", "node => node.innerText"));
```

## ElementHandle.evalOnSelectorAll(selector, expression[, arg])
- `selector` <[String]> A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `expression` <[String]> JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.
- `arg` <[Object]> Optional argument to pass to `expression`.
- returns: <[Object]>

Returns the return value of `expression`.

The method finds all elements matching the specified selector in the `ElementHandle`'s subtree and passes an array of matched elements as a first argument to `expression`. See [Working with selectors](./selectors.mdx) for more details.

If `expression` returns a [Promise], then [ElementHandle.evalOnSelectorAll(selector, expression[, arg])](./api/class-elementhandle.mdx#elementhandleevalonselectorallselector-expression-arg) would wait for the promise to resolve and return its value.

Examples:

```html
<div class="feed">
  <div class="tweet">Hello!</div>
  <div class="tweet">Hi!</div>
</div>
```

```java
ElementHandle feedHandle = page.querySelector(".feed");
assertEquals(Arrays.asList("Hello!", "Hi!"), feedHandle.evalOnSelectorAll(".tweet", "nodes => nodes.map(n => n.innerText)"));
```

## ElementHandle.fill(value[, options])
- `value` <[String]> Value to set for the `<input>`, `<textarea>` or `[contenteditable]` element.
- `options` <`ElementHandle.FillOptions`>
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method waits for [actionability](./actionability.mdx) checks, focuses the element, fills it and triggers an `input` event after filling. If the element is inside the `<label>` element that has associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), that control will be filled instead. If the element to be filled is not an `<input>`, `<textarea>` or `[contenteditable]` element, this method throws an error. Note that you can pass an empty string to clear the input field.

## ElementHandle.focus()

Calls [focus](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/focus) on the element.

## ElementHandle.getAttribute(name)
- `name` <[String]> Attribute name to get the value for.
- returns: <[null]|[String]>

Returns element attribute value.

## ElementHandle.hover([options])
- `options` <`ElementHandle.HoverOptions`>
  - `setForce` <[boolean]> Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `setModifiers` <[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>> Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `setPosition` <`Position`> A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `setX` <[double]>
    - `setY` <[double]>
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method hovers over the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#pagemouse) to hover over the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method rejects.

When all steps combined have not finished during the specified `timeout`, this method rejects with a [TimeoutError]. Passing zero timeout disables this.

## ElementHandle.innerHTML()
- returns: <[String]>

Returns the `element.innerHTML`.

## ElementHandle.innerText()
- returns: <[String]>

Returns the `element.innerText`.

## ElementHandle.isChecked()
- returns: <[boolean]>

Returns whether the element is checked. Throws if the element is not a checkbox or radio input.

## ElementHandle.isDisabled()
- returns: <[boolean]>

Returns whether the element is disabled, the opposite of [enabled](./actionability.mdx#enabled).

## ElementHandle.isEditable()
- returns: <[boolean]>

Returns whether the element is [editable](./actionability.mdx#editable).

## ElementHandle.isEnabled()
- returns: <[boolean]>

Returns whether the element is [enabled](./actionability.mdx#enabled).

## ElementHandle.isHidden()
- returns: <[boolean]>

Returns whether the element is hidden, the opposite of [visible](./actionability.mdx#visible).

## ElementHandle.isVisible()
- returns: <[boolean]>

Returns whether the element is [visible](./actionability.mdx#visible).

## ElementHandle.ownerFrame()
- returns: <[null]|[Frame]>

Returns the frame containing the given element.

## ElementHandle.press(key[, options])
- `key` <[String]> Name of the key to press or a character to generate, such as `ArrowLeft` or `a`.
- `options` <`ElementHandle.PressOptions`>
  - `setDelay` <[double]> Time to wait between `keydown` and `keyup` in milliseconds. Defaults to 0.
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

Focuses the element, and then uses [Keyboard.down(key)](./api/class-keyboard.mdx#keyboarddownkey) and [Keyboard.up(key)](./api/class-keyboard.mdx#keyboardupkey).

`key` can specify the intended [keyboardEvent.key](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key) value or a single character to generate the text for. A superset of the `key` values can be found [here](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key/Key_Values). Examples of the keys are:

`F1` - `F12`, `Digit0`- `Digit9`, `KeyA`- `KeyZ`, `Backquote`, `Minus`, `Equal`, `Backslash`, `Backspace`, `Tab`, `Delete`, `Escape`, `ArrowDown`, `End`, `Enter`, `Home`, `Insert`, `PageDown`, `PageUp`, `ArrowRight`, `ArrowUp`, etc.

Following modification shortcuts are also supported: `Shift`, `Control`, `Alt`, `Meta`, `ShiftLeft`.

Holding down `Shift` will type the text that corresponds to the `key` in the upper case.

If `key` is a single character, it is case-sensitive, so the values `a` and `A` will generate different respective texts.

Shortcuts such as `key: "Control+o"` or `key: "Control+Shift+T"` are supported as well. When speficied with the modifier, modifier is pressed and being held while the subsequent key is being pressed.

## ElementHandle.querySelector(selector)
- `selector` <[String]> A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- returns: <[null]|[ElementHandle]>

The method finds an element matching the specified selector in the `ElementHandle`'s subtree. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns `null`.

## ElementHandle.querySelectorAll(selector)
- `selector` <[String]> A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- returns: <[List]<[ElementHandle]>>

The method finds all elements matching the specified selector in the `ElementHandle`s subtree. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns empty array.

## ElementHandle.screenshot([options])
- `options` <`ElementHandle.ScreenshotOptions`>
  - `setOmitBackground` <[boolean]> Hides default white background and allows capturing screenshots with transparency. Not applicable to `jpeg` images. Defaults to `false`.
  - `setPath` <[Path]> The file path to save the image to. The screenshot type will be inferred from file extension. If `path` is a relative path, then it is resolved relative to the current working directory. If no path is provided, the image won't be saved to the disk.
  - `setQuality` <[int]> The quality of the image, between 0-100. Not applicable to `png` images.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.
  - `setType` <`enum ScreenshotType { PNG, JPEG }`> Specify screenshot type, defaults to `png`.
- returns: <[byte&#91;&#93;]>

Returns the buffer with the captured screenshot.

This method waits for the [actionability](./actionability.mdx) checks, then scrolls element into view before taking a screenshot. If the element is detached from DOM, the method throws an error.

## ElementHandle.scrollIntoViewIfNeeded([options])
- `options` <`ElementHandle.ScrollIntoViewIfNeededOptions`>
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method waits for [actionability](./actionability.mdx) checks, then tries to scroll element into view, unless it is completely visible as defined by [IntersectionObserver](https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API)'s `ratio`.

Throws when `elementHandle` does not point to an element [connected](https://developer.mozilla.org/en-US/docs/Web/API/Node/isConnected) to a Document or a ShadowRoot.

## ElementHandle.selectOption(values[, options])
- `values` <[null]|[String]|[ElementHandle]|[List]<[String]>|`SelectOption`|[List]<[ElementHandle]>|[List]<`SelectOption`>> Options to select. If the `<select>` has the `multiple` attribute, all matching options are selected, otherwise only the first option matching one of the passed options is selected. String values are equivalent to `{value:'string'}`. Option is considered matching if all specified properties match.
  - `setValue` <[String]> Matches by `option.value`. Optional.
  - `setLabel` <[String]> Matches by `option.label`. Optional.
  - `setIndex` <[int]> Matches by the index. Optional.
- `options` <`ElementHandle.SelectOptionOptions`>
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.
- returns: <[List]<[String]>>

Returns the array of option values that have been successfully selected.

Triggers a `change` and `input` event once all the provided options have been selected. If element is not a `<select>` element, the method throws an error.

Will wait until all specified options are present in the `<select>` element.

```java
// single selection matching the value
handle.selectOption("blue");
// single selection matching the label
handle.selectOption(new SelectOption().setLabel("Blue"));
// multiple selection
handle.selectOption(new String[] {"red", "green", "blue"});
```

## ElementHandle.selectText([options])
- `options` <`ElementHandle.SelectTextOptions`>
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method waits for [actionability](./actionability.mdx) checks, then focuses the element and selects all its text content.

## ElementHandle.setInputFiles(files[, options])
- `files` <[Path]|[List]<[Path]>|`FilePayload`|[List]<`FilePayload`>>
  - `setName` <[String]> File name
  - `setMimeType` <[String]> File type
  - `setBuffer` <[byte&#91;&#93;]> File content
- `options` <`ElementHandle.SetInputFilesOptions`>
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method expects `elementHandle` to point to an [input element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input).

Sets the value of the file input to these file paths or files. If some of the `filePaths` are relative paths, then they are resolved relative to the the current working directory. For empty array, clears the selected files.

## ElementHandle.tap([options])
- `options` <`ElementHandle.TapOptions`>
  - `setForce` <[boolean]> Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `setModifiers` <[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>> Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setPosition` <`Position`> A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `setX` <[double]>
    - `setY` <[double]>
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method taps the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.touchscreen()](./api/class-page.mdx#pagetouchscreen) to tap the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method rejects.

When all steps combined have not finished during the specified `timeout`, this method rejects with a [TimeoutError]. Passing zero timeout disables this.

:::note
`elementHandle.tap()` requires that the `hasTouch` option of the browser context be set to true.
:::

## ElementHandle.textContent()
- returns: <[null]|[String]>

Returns the `node.textContent`.

## ElementHandle.type(text[, options])
- `text` <[String]> A text to type into a focused element.
- `options` <`ElementHandle.TypeOptions`>
  - `setDelay` <[double]> Time to wait between key presses in milliseconds. Defaults to 0.
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

Focuses the element, and then sends a `keydown`, `keypress`/`input`, and `keyup` event for each character in the text.

To press a special key, like `Control` or `ArrowDown`, use [ElementHandle.press(key[, options])](./api/class-elementhandle.mdx#elementhandlepresskey-options).

```java
elementHandle.type("Hello"); // Types instantly
elementHandle.type("World", new ElementHandle.TypeOptions().setDelay(100)); // Types slower, like a user
```

An example of typing into a text field and then submitting the form:

```java
ElementHandle elementHandle = page.querySelector("input");
elementHandle.type("some text");
elementHandle.press("Enter");
```

## ElementHandle.uncheck([options])
- `options` <`ElementHandle.UncheckOptions`>
  - `setForce` <[boolean]> Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `setNoWaitAfter` <[boolean]> Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method rejects. If the element is already unchecked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#pagemouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now unchecked. If not, this method rejects.

If the element is detached from the DOM at any moment during the action, this method rejects.

When all steps combined have not finished during the specified `timeout`, this method rejects with a [TimeoutError]. Passing zero timeout disables this.

## ElementHandle.waitForElementState(state[, options])
- `state` <`enum ElementState { VISIBLE, HIDDEN, STABLE, ENABLED, DISABLED, EDITABLE }`> A state to wait for, see below for more details.
- `options` <`ElementHandle.WaitForElementStateOptions`>
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.

Returns when the element satisfies the `state`.

Depending on the `state` parameter, this method waits for one of the [actionability](./actionability.mdx) checks to pass. This method throws when the element is detached while waiting, unless waiting for the `"hidden"` state.
* `"visible"` Wait until the element is [visible](./actionability.mdx#visible).
* `"hidden"` Wait until the element is [not visible](./actionability.mdx#visible) or [not attached](./actionability.mdx#attached). Note that waiting for hidden does not throw when the element detaches.
* `"stable"` Wait until the element is both [visible](./actionability.mdx#visible) and [stable](./actionability.mdx#stable).
* `"enabled"` Wait until the element is [enabled](./actionability.mdx#enabled).
* `"disabled"` Wait until the element is [not enabled](./actionability.mdx#enabled).
* `"editable"` Wait until the element is [editable](./actionability.mdx#editable).

If the element does not satisfy the condition for the `timeout` milliseconds, this method will throw.

## ElementHandle.waitForSelector(selector[, options])
- `selector` <[String]> A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `options` <`ElementHandle.WaitForSelectorOptions`>
  - `setState` <`enum WaitForSelectorState { ATTACHED, DETACHED, VISIBLE, HIDDEN }`> Defaults to `'visible'`. Can be either:
    * `'attached'` - wait for element to be present in DOM.
    * `'detached'` - wait for element to not be present in DOM.
    * `'visible'` - wait for element to have non-empty bounding box and no `visibility:hidden`. Note that element without any content or with `display:none` has an empty bounding box and is not considered visible.
    * `'hidden'` - wait for element to be either detached from DOM, or have an empty bounding box or `visibility:hidden`. This is opposite to the `'visible'` option.
  - `setTimeout` <[double]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#pagesetdefaulttimeouttimeout) methods.
- returns: <[null]|[ElementHandle]>

Returns element specified by selector when it satisfies `state` option. Returns `null` if waiting for `hidden` or `detached`.

Wait for the `selector` relative to the element handle to satisfy `state` option (either appear/disappear from dom, or become visible/hidden). If at the moment of calling the method `selector` already satisfies the condition, the method will return immediately. If the selector doesn't satisfy the condition for the `timeout` milliseconds, the function will throw.

```java
page.setContent("<div><span></span></div>");
ElementHandle div = page.querySelector("div");
// Waiting for the "span" selector relative to the div.
ElementHandle span = div.waitForSelector("span", new ElementHandle.WaitForSelectorOptions()
  .setState(WaitForSelectorState.ATTACHED));
```

:::note
This method does not work across navigations, use [Page.waitForSelector(selector[, options])](./api/class-page.mdx#pagewaitforselectorselector-options) instead.
:::


[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[Evaluation Argument]: ./core-concepts.mdx#evaluationargument "Evaluation Argument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"